--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ html{
 /* Cyber Agency Home Page Header Section Style */
 
 .banner-section-outer {
-   background: url('../images/banner_background.png');
+   background: url('../images/bb.jpg');
    position: relative;
    background-position: center;
    background-repeat: no-repeat;
